# badge-engine

./: .gitignore  CMakeLists.txt  LICENSE
examples/hello_badge/: CMakeLists.txt  main.cpp
examples/test_data/: test.badge
include/badge_engine/: badge_engine.h  types.h
presets/ceremonies/: common.json  epic.json  legendary.json  rare.json  uncommon.json
presets/ibl/default/: default_ibl.ktx  sh.txt
presets/lighting/: embedded.json  fullscreen.json
presets/materials/: common.json  epic.json  legendary.json  rare.json  uncommon.json
scripts/: build-badge-engine-ios.sh
src/: animator.cpp  animator.h  asset_loader.cpp  c_api.cpp  ceremony.cpp  ceremony.h  engine.cpp  engine.h  interaction.cpp  interaction.h  lighting.cpp  lighting.h  material.cpp  material.h  renderer.cpp  scene.cpp  scene.h
tests/: CMakeLists.txt  test_animator.cpp  test_ceremony.cpp  test_engine.cpp  test_interaction.cpp  test_lighting.cpp  test_material.cpp
